@@ -1,3 +1,9 @@
+2005-01-07  Davyd Madeley  <davyd@madeley.id.au>
+
+	* stickynotes.c: allow stickynotes to remember their position and size
+	  correctly. Fixes #316305. Patch from André Martins
+	  <almar@mega.ist.utl.pt>.
+
 2005-12-22  Davyd Madeley  <davyd@madeley.id.au>
 
 	* stickynotes.c:
